# monday-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/monday_cli/: __init__.py  __main__.py  cli.py  config.py  constants.py
src/monday_cli/client/: graphql_client.py  models.py  mutations.py  queries.py
src/monday_cli/commands/: boards.py  docs.py  groups.py  items.py  statuses.py  subitems.py  updates.py  workspaces.py
src/monday_cli/utils/: error_handler.py  logging.py  output.py  rate_limit.py  retry.py
